platform/andromeda/aggregator/deployment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator
spec:
  template:
    spec:
      containers:
        - name: aggregator
          volumeMounts:
            - mountPath: /config/
              name: config
      volumes:
        - name: config
          configMap:
            name: aggregator-config
