platform/andromeda/aggregator/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: andromeda
spec:
  rules:
    - host: andromeda-api.igiari.net
      http:
        paths:
          - backend:
              serviceName: aggregator
              servicePort: 9090
            path: /
